<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nativetemplate.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout"
            android:padding="5dp"
            android:layout_alignStart="@+id/textInputLayout2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text"
                android:id="@+id/xusername"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout2"
            android:layout_below="@+id/textInputLayout"
            android:padding="5dp">
            <EditText
                android:id="@+id/xpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_below="@+id/textInputLayout"
                android:layout_alignStart="@+id/textInputLayout" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout3"
            android:layout_below="@+id/textInputLayout2"
            android:padding="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPhonetic"
                android:hint="@string/mobile"
                android:id="@+id/xmobile"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout4"
            android:layout_below="@+id/textInputLayout3"
            android:padding="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:id="@+id/xemail"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout5"
            android:layout_below="@+id/textInputLayout4"
            android:padding="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/dob"
                android:id="@+id/xdob"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textInputLayout5"
            android:id="@+id/xlogin_button" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/xlogin_button"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/dont_have_account"
            android:id="@+id/xdont_have_acc"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/xsignup_button"
            android:text="@string/singup"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/xdont_have_acc" />
    </RelativeLayout>


</ScrollView>
