<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.nativetemplate.activities.GoogleVision">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.nativetemplate.activities.GoogleVision">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/xrl_welcome"
            android:textSize="20dp"
            android:padding="25dp"
             android:visibility="visible"
            android:text="Hey, \n\n\t Welcome to AI. \n\n\t We are able to give you suggestions depends upon your capture.\n\n\t Are you excited?.\n\n\t Then Click Camera above and you will see magic.."/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:id="@+id/xiv_image"
            android:visibility="gone"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/xrl_match_images"
        android:clipToPadding="false"
        android:padding="10dp"
        android:layout_below="@+id/xiv_image"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagesWithMatchingImages"
            android:textSize="18dp"
            android:background="#ffffff"
            android:id="@+id/xtv_pagesWithMatchingImages"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:nestedScrollingEnabled="false"
            android:layout_below="@+id/xtv_pagesWithMatchingImages"
            android:clipToPadding="false"
            android:id="@+id/xrecycler_pagesWithMatchingImages"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visuallySimilarImages"
            android:textSize="18dp"
            android:background="#ffffff"
            android:layout_below="@+id/xrecycler_pagesWithMatchingImages"
            android:id="@+id/xtv_visuallySimilarImages"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:nestedScrollingEnabled="false"
            android:layout_below="@+id/xtv_visuallySimilarImages"
            android:clipToPadding="false"
            android:id="@+id/xrecycler_match_images"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullMatchingImages"
            android:textSize="18dp"
            android:background="#ffffff"
            android:layout_below="@+id/xrecycler_match_images"
            android:id="@+id/xtv_partialMatchingImages"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:nestedScrollingEnabled="false"
            android:layout_below="@+id/xtv_partialMatchingImages"
            android:clipToPadding="false"
            android:id="@+id/xrecycler_partialMatchingImages"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/webEntities"
            android:textSize="18dp"
            android:background="#ffffff"
            android:layout_below="@+id/xrecycler_partialMatchingImages"
            android:id="@+id/xtv_webEntities"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:nestedScrollingEnabled="false"
            android:layout_below="@+id/xtv_webEntities"
            android:clipToPadding="false"
            android:id="@+id/xrecycler_webEntities"/>
    </RelativeLayout>
</RelativeLayout>
</ScrollView>